# AV3

./: README.md  pyproject.toml  requirements.txt
digiosc/: __main__.py  main.py
digiosc/av3/: __init__.py  av3.py  base.py
digiosc/lib/: kbhit.py  logging.py  midi.py  types.py  vrchat.py  xinput.py
digiosc/osc/: __init__.py  client.py
